# cbs_service

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
cbs_service/: service.py
src/cbs_service/: __init__.py  service.py
